<resources>
    <string name="app_name">Grate App</string>
    <string name="moto">Cloud Based Business Management Software for Basement Waterproofing Grate Products Dealers.</string>
    <string name="login_text"><b>Log In</b> to your account to continue basement inspection.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="log_in">LOG IN</string>
    <string name="forget_password">Forget Password</string>
    <string name="search_customer">Search Customer</string>
    <string name="add_customer">Add Customer</string>
    <string name="customers">Customers</string>
    <string name="filter">Filter</string>
    <string name="customer_name">Customer name</string>
    <string name="customer_details">Customer Details</string>
    <string name="all_customer">All Customer</string>
    <string name="estimate">Estimate:</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading...</string>
    <string name="basement_inspection_report">Basement Inspection Report</string>
    <string name="required">* Required</string>
    <string name="invalid">* Invalid</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
</resources>
