<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="horizontal"
    android:weightSum="4"
    tools:context=".View.DashboardActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="32dp"
        android:outlineAmbientShadowColor="@android:color/darker_gray"
        android:outlineSpotShadowColor="@color/colorSandWhite"
        android:elevation="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            app:cardBackgroundColor="#E3F2FD"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="4dp"
            app:contentPadding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/dashboard_app_logo"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/dashboard_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/dashboard_app_logo"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@android:color/darker_gray" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_nav_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardMaxElevation="4dp"
            app:contentPadding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/user_nav_home_logo"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_home"
                    android:tint="@android:color/white" />

                <TextView
                    android:id="@+id/user_nav_home_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/user_nav_home_logo"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/dashboard"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_nav_add_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="4dp"
            app:contentPadding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/user_nav_add_customer_logo"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_add_customer"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/user_nav_add_customer_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/user_nav_add_customer_logo"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/add_customer"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_nav_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="4dp"
            app:contentPadding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/user_nav_change_password_logo"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_change_password"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/user_nav_change_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/user_nav_change_password_logo"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/change_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_nav_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="4dp"
            app:contentPadding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/user_nav_sign_out_logo"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_logout"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/user_nav_sign_out_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/user_nav_sign_out_logo"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/logout"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/user_nav_welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/font_regular"
                android:text="Welcome,"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/user_nav_account_holder_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/user_nav_welcome_text"
                android:ellipsize="end"
                android:fontFamily="@font/font_regular"
                android:singleLine="true"
                android:text="Omar"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@color/colorOffWhite"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">


            <TextView
                android:id="@+id/user_module_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/font_bold"
                android:text="@string/dashboard"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorAccent" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/user_module_search"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_shape_search"
                app:closeIcon="@drawable/ic_close"
                app:commitIcon="@drawable/ic_search"
                app:defaultQueryHint="Search Chat"
                app:goIcon="@drawable/ic_search"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/transparent"
                app:queryHint="Search"
                app:searchHintIcon="@drawable/ic_search"
                app:showDividers="none"
                android:elevation="2dp"
                app:submitBackground="@color/colorAccent" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/user_module_container"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="24dp" />
    </LinearLayout>

</LinearLayout>